<resources>
    <string name="app_name">Birthday Reminder Generator</string>
    <string name="date_format">yyyy-MM-dd</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="loading_wait">Loading&#8230;</string>
    <string name="loading_pictures">Loading pictures&#8230;</string>
    <string name="generate_reminders">Generate reminders&#8230;</string>
    <string name="generate_reminders_title">Generate reminders</string>
    <string name="generate_reminders_question">Do you want to generate reminders for selected contacts?</string>
    <string name="filter">Filter</string>
    <string name="filtering">Filtering&#8230;</string>
    <string name="select_all">Select all</string>
    <string name="unselect_all">Unselect all</string>
    <string name="contact_image">[ ]</string>
    <string name="icon_checkbox">[ ]</string>
    <string name="no_contacts">You don\'t have contacts</string>
    <string name="contacts_loaded">Were loaded %d contacts</string>
    <string name="loading_birthdays">Loading birthdays&#8230;</string>
    <string name="no_birthdays">Your contacts do not contain birthdays</string>
    <string name="birthdays_loaded">Were loaded %d birthdays</string>
    <string name="no_calendar">No access to any calendar to generate reminders.</string>
    <string name="no_calendar_access">No access to any calendar to get reminders.</string>
    <string name="select_a_calendar">Select a calendar from settings first!</string>
    <string name="reminder_deleted">Deleted one reminder.</string>
    <string name="reminders_deleted">Deleted %d reminders.</string>
    <string name="reminder_inserted">Inserted one reminder.</string>
    <string name="reminders_inserted">Inserted %d reminders.</string>
    <string name="reminder_updated">Updated one reminder.</string>
    <string name="reminders_updated">Updated %d reminders.</string>
    <string name="no_changes">Nothig was changed.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="information">Information:</string>
    <string name="error_occurred">An error occurred:</string>
    <string name="no_birthday_for">The contact: %s don\'t have birthday informations!</string>
    <string name="remove_contact_birthday_title">Remove Contact Birthday</string>
    <string name="remove_contact_birthday_question">Do you want to remove birthday informations for the contact: %s?</string>
    <string name="contact_birthday_removed">Contact birthday removed successfully!</string>
    <string name="contact_birthday_not_removed">No birthday removed for contact: %s.</string>
    <string name="sync_in_progress">Synchronize contacts with reminders&#8230;</string>
    <string name="sync_confirmation_title">Synchronize contacts reminders</string>
    <string name="sync_confirmation_question">Do you want to synchronize contacts with existing reminders?\nNote, the existing reminders are recognized by the reminder title format.</string>
    <string name="sync_no">No contact has reminders!</string>
    <string name="sync_one">One contact has a reminder.</string>
    <string name="sync_more">%d contacts has reminders.</string>
    <string name="age">Age: %d</string>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="action_back">Back</string>
    <string name="action_generate">Generate reminders</string>
    <string name="action_sync">Synchronize reminders</string>
    <string name="action_reload">Reload</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="contact_item_title">Choose to edit:</string>
    <string-array name="contact_item">
        <item>Edit Birthday</item>
        <item>Remove Birthday</item>
        <item>Contact</item>
        <item>(Re)Generate reminder</item>
    </string-array>
    <string-array name="slide_menu_items">
        <item>Contacts</item>
        <item>Settings</item>
        <item>About</item>
        <item>License</item>
    </string-array>
    <string name="general_settings">General settings</string>
    <string name="reminder_settings">Reminder settings</string>
    <string name="settings">Settings</string>
    <string name="str_dateFormat">Date format from database.</string>
    <string name="str_displayDateFormat">Display date format</string>
    <string name="str_calendar">Select calendar for reminders</string>
    <string name="select_calendar">Where will be created reminders</string>
    <string-array name="choose_calendar">
        <item>No calendar support</item>
    </string-array>
    <string-array name="choose_calendar_values">
        <item>none</item>
    </string-array>
    <string name="str_reminderTitleFormat">Reminder title format</string>
    <string name="str_reminderDescriptionFormat">Reminder description format</string>
    <string name="str_isAllDay">Is all day reminder?</string>
    <string name="str_isAllDaySummary">Define the reminder valability during all day</string>
    <string name="displayDateFormat">yyyy-MM-dd</string>
    <string name="reminderTitleFormat">%s\'s birthday</string>
    <string name="reminderDescriptionFormat">Today is %s\'s birthday!</string>
    <string name="time_title">Reminder start and end times</string>
    <string name="str_reminderStartTime">Start time</string>
    <string name="str_reminderEndTime">End time</string>
    <string name="str_when_start">When to start</string>
    <string name="str_when_end">When to end</string>
    <string name="reminderStartTime">09:00</string>
    <string name="reminderEndTime">23:59</string>
    <string name="reminderMethod">Pop-up / Alert</string>
    <string name="reminderBeforeMinutes">Calendar default</string>
    <string name="str_reminderType">Reminder type</string>
    <string name="select_reminder_type">Select reminder type</string>
    <string-array name="choose_reminder_type">
        <item>Pop-up / Alert</item>
        <item>Email</item>
        <item>SMS</item>
    </string-array>
    <string-array name="choose_reminder_type_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="str_reminderBefore">Reminder before</string>
    <string name="select_reminder_before">Select reminder before time</string>
    <string-array name="choose_reminder_before">
        <item>Calendar default</item>
        <item>At start time</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>20 minutes</item>
        <item>25 minutes</item>
        <item>30 minutes</item>
        <item>45 minutes</item>
        <item>1 hour</item>
        <item>2 hours</item>
        <item>3 hours</item>
        <item>12 hours</item>
        <item>24 hours</item>
        <item>2 days</item>
        <item>1 week</item>
    </string-array>
    <string-array name="choose_reminder_before_values">
        <item>-1</item>
        <item>0</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
        <item>120</item>
        <item>180</item>
        <item>720</item>
        <item>1440</item>
        <item>2880</item>
        <item>10080</item>
    </string-array>
    <string name="gui_category">User interface</string>
    <string name="enable_fast_scroll">Enable fast scroll</string>
    <string name="enable_fast_scroll_desc">Enable contact list fast scroll (restart app required)</string>
    <string name="backup_restore_settings">Backup, restore or reset settings</string>
    <string name="backup_restore_settings_desc">Backup, restore or reset applications settings</string>
    <string name="backup_settings">Backup settings</string>
    <string name="backup">Backup</string>
    <string name="backup_desc">Backup application settings</string>
    <string name="restore">Restore</string>
    <string name="restore_desc">Restore application settings</string>
    <string name="default_backup_dir">/mnt/sdcard/</string>
    <string name="default_backup_file">brg.prefs</string>
    <string name="reset_settings">Reset settings</string>
    <string name="reset_settings_desc">Reset all settings</string>
    <string name="reset_settings_question">Do you reset your settings?</string>
    <string name="file_name_missing">You have not specitied a file name for the operation!</string>
    <string name="export_started">Preferences exporting started!</string>
    <string name="export_success">Successfully exported to: %s!</string>
    <string name="export_exception">Exception ocured during exporting: %1$s\nException: %2$s\nMessage: %3$s</string>
    <string name="create_folders_error">Cannot create parent folders: %s</string>
    <string name="import_file_not_exist">Importing file: %s don\'t exist!\nCreate it first!</string>
    <string name="import_started">Preferences importing started!</string>
    <string name="import_success">Successfully imported from: %s!</string>
    <string name="import_exception">Exception ocured during importing:  %1$s Exception: %2$s Message: %3$s</string>
    <string name="about_text"><Data>
<![CDATA[
<b>Application version: %s</b><br/>
<b>What this program do?</b><br/>
<b>1.</b> This program scan your contacts from phonebook for birthdays.<br/>
The contacts are displayed alphabetically on a list with:<br/>
- contact photo;<br/>
- contact name;<br/>
- age;<br/>
- birthday, you can change the date format from settings, property \"Display date format\", default format is Year-Month-Day \"yyyy-MM-dd\", you can use MM/dd/yyyy or others, google for: \"java SimpleDateFormat Patterns\".<br/>
<b>2.</b> With this application you can add, edit and remove birthday information to a contact.<br/>
<b>3.</b> You can generate a reminder on your favorite calendar based on the settings made. <b>Firstly you should select one</b> from settings, \"Select calendar for reminders\".<br/>
See available reminder properties on the settings menu.<br/>
<br/>
<b>Note: This application is not a service, the reminders should be notified by your favorite calendar service!</b> So you should not worry about the RAM memory consumed by this application because you can close it after each use.<br/>
<br/>
<i>Observations:</i><br/>
The application was tested only with google contacts and calendars.<br/>
- When is started the application is loading all your available contacts, but the birthdays and images are loaded in background and appear when are loaded in this time this application could become lagging.<br/>
Unfortunately the application \"lose\" the generated reminders when is reinstalled, but generated reminders remain stored on the calendar, that\'s because the contacts and reminders will have different ID\'s and can not be identified by this application, I did not find a way to do that. So, if the user chose to generate reminders, then new ones will be regenerated.<br/>
<br/>
This application use Treetog ArtWork\'s free icons from: <a href="http://www.iconarchive.com/artist/treetog.html">http://www.iconarchive.com/artist/treetog.html</a>.<br/>
The sources of this application are stored at: <a href="https://code.google.com/p/brgen/">https://code.google.com/p/brgen/</a>.<br/>
<br/>
Thank you for using this application!<br/>]]>
</Data></string>
    <string name="license">License</string>
    <string name="donate">Donate</string>
    <string name="donate_title">Donation confirmation</string>
    <string name="donate_message">If you appreciate this application, please do a donation buying Birthday Reminder Gen. PRO!\nPressing YES button, you will be sent to Birthday Reminder Gen. PRO from Google Play Store.\nThank you for using this application!</string>
</resources>