<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/more"
        android:icon="@drawable/ic_menu_moreoverflow_holo_dark"
        android:showAsAction="always"
        android:title="">
        <menu>
            <item
                android:id="@+id/action_generate"
                android:icon="@drawable/ic_menu_agenda"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/action_generate"/>
            <item
                android:id="@+id/action_reload"
                android:icon="@drawable/ic_menu_reload"
                android:orderInCategory="101"
                android:showAsAction="never"
                android:title="@string/action_reload"/>
            <item
                android:id="@+id/action_settings"
                android:icon="@drawable/ic_menu_settings"
                android:orderInCategory="102"
                android:showAsAction="never"
                android:title="@string/action_settings"/>
            <item
                android:id="@+id/action_exit"
                android:icon="@drawable/ic_menu_close_clear_cancel"
                android:orderInCategory="103"
                android:showAsAction="never"
                android:title="@string/action_exit"/>
        </menu>
    </item>

</menu>